package com.example.keep_in_touch.mapper;


import org.springframework.stereotype.Component;

/** Mapper class for converting between User entities and UserDTO objects.
 */
@Component
public class UserMapper {


}
