package com.example.keep_in_touch.service.impl;

public class EventServiceImpl {
}
